package ntt.beca.films.media;

public enum MediaType {
      IMAGE, VIDEO, DOCUMENT
}
