package ntt.beca.films.person;

public enum PersonType {
      ACTOR, DIRECTOR
}